# Muezzin-rust

./: .gitignore  Cargo.toml  MIGRATION.md  README.md  VERSIONING.md  index.html  package.json  tauri.conf.json  vite.config.js
.github/workflows/: release.yml
scripts/: release.sh
src/: api.js  main.js  ui.js
src-tauri/: Cargo.toml
src-tauri/src/: audio.rs  commands.rs  error.rs  geolocation.rs  main.rs  models.rs  prayer_times.rs  storage.rs  tray.rs
