[package]
name = "muezzin"
version = "1.0.0"
description = "A modern prayer times and Quran application"
authors = ["CormacZ"]
edition = "2021"
rust-version = "1.91"

[dependencies]
tauri = { version = "2.1", features = ["devtools", "tray-icon", "notification", "dialog-all", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
salah = "0.7"
rodio = "0.19"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0"
directories = "5.0"
auto-launch = "0.6"
parking_lot = "0.12"
once_cell = "1.20"
tauri-plugin-store = "2.1"
tauri-plugin-notification = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-shell = "2.1"
tauri-plugin-autostart = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
